{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 1142,
  "lineage": "7b663cd3-461b-f14c-4ad9-b12e4b142944",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03cd80cfebcbb4481",
            "arn": "arn:aws:ec2:us-east-1:850574039599:instance/i-082a91c306f10054f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-082a91c306f10054f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "E3uYUEVdV86o3YonhDHON8TfJhoNAO7FLWAnnBP2z8t5r05lvfS1rxoKM6a+/ZNyr+QL6OcafvAbiEBtEDj3k0+VHwWtkagMiRYa+vCtnNSUCPyugsNR3uAwVx6UM9Wjr7rd/+/9PDllK7LZIuakbHmZv/knkWAF69dbeXiI7RpQiTYfguxlHLZnmR3OG5WJ7IqvOLC7XmCzwHAmR0L9GJOHXp5IgRa1Ndda8CtISPlPUHWa32XDnHBgDWP0zd7vH21n1AKGIgi8BGPVVci8QmsE84BtCZ0H0LW2DdkWJfD6QYptNmKf+GPsZdNMsP+S+7p7N8JVbWFl9n4tS7OTNQ==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec9bc6948ef38723",
            "private_dns": "ip-172-18-1-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.18.1.221",
            "public_dns": "ec2-54-172-65-41.compute-1.amazonaws.com",
            "public_ip": "54.172.65.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08141ca8ef8850bb0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067b2cc437e8d7022",
            "tags": {
              "Name": "Windows-TerraServidor"
            },
            "tags_all": {
              "Name": "Windows-TerraServidor",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fef62ce4830d503d"
            ]
          },
          "dependencies": [
            "aws_security_group.Windows_sg",
            "aws_subnet.Subrede-Pub1",
            "aws_vpc.VPC-CloudPlay",
            "data.template_file.user_data_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-CloudPlay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:internet-gateway/igw-094e1061dbc03a9ba",
            "id": "igw-094e1061dbc03a9ba",
            "owner_id": "850574039599",
            "tags": {
              "Name": "IGW-CloudPlay"
            },
            "tags_all": {
              "Name": "IGW-CloudPlay",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rotas-CloudPlay-Pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:route-table/rtb-01570647b5048cbf2",
            "id": "rtb-01570647b5048cbf2",
            "owner_id": "850574039599",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Rotas-CloudPlay-Pri"
            },
            "tags_all": {
              "Name": "Rotas-CloudPlay-Pri",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rotas-CloudPlay-Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:route-table/rtb-0a15663fd21b35da1",
            "id": "rtb-0a15663fd21b35da1",
            "owner_id": "850574039599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094e1061dbc03a9ba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rotas-CloudPlay-Pub"
            },
            "tags_all": {
              "Name": "Rotas-CloudPlay-Pub",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subrede-Pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d0a5ea7bb0dec3",
            "route_table_id": "rtb-0a15663fd21b35da1",
            "subnet_id": "subnet-05ac20e07ffe16419"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_route_table.Rotas-CloudPlay-Pub",
            "aws_subnet.Subrede-Pri1",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subrede-Pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d0a5ea7bb0dec3",
            "route_table_id": "rtb-0a15663fd21b35da1",
            "subnet_id": "subnet-05ac20e07ffe16419"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_route_table.Rotas-CloudPlay-Pub",
            "aws_subnet.Subrede-Pri1",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subrede-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e1c60d61cde8a9c",
            "route_table_id": "rtb-0a15663fd21b35da1",
            "subnet_id": "subnet-067b2cc437e8d7022"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_route_table.Rotas-CloudPlay-Pub",
            "aws_subnet.Subrede-Pub1",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subrede-Pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092a3102a48afee7c",
            "route_table_id": "rtb-0a15663fd21b35da1",
            "subnet_id": "subnet-0c1027cc93fa36bd0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_route_table.Rotas-CloudPlay-Pub",
            "aws_subnet.Subrede-Pub2",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:security-group/sg-0fef62ce4830d503d",
            "description": "Allow RDP and Ping",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fef62ce4830d503d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Windows-gs",
            "name_prefix": "",
            "owner_id": "850574039599",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subrede-Pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:subnet/subnet-05ac20e07ffe16419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.18.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ac20e07ffe16419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "850574039599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subrede-Pri1"
            },
            "tags_all": {
              "Name": "Subrede-Pri1",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subrede-Pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:subnet/subnet-062ac3886f0415e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062ac3886f0415e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "850574039599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subrede-Pri2"
            },
            "tags_all": {
              "Name": "Subrede-Pri2",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subrede-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:subnet/subnet-067b2cc437e8d7022",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067b2cc437e8d7022",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "850574039599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subrede-Pub1"
            },
            "tags_all": {
              "Name": "Subrede-Pub1",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subrede-Pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:subnet/subnet-0c1027cc93fa36bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.18.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1027cc93fa36bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "850574039599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subrede-Pub2"
            },
            "tags_all": {
              "Name": "Subrede-Pub2",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            },
            "vpc_id": "vpc-0fd4b42da2bdb8a51"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-CloudPlay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:850574039599:vpc/vpc-0fd4b42da2bdb8a51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-07d59a6a66420dcb1",
            "default_route_table_id": "rtb-019ed36c568506301",
            "default_security_group_id": "sg-0a803f5105a0b6461",
            "dhcp_options_id": "dopt-0f00f2d24c2531721",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd4b42da2bdb8a51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019ed36c568506301",
            "owner_id": "850574039599",
            "tags": {
              "Name": "VPC-CloudPlay"
            },
            "tags_all": {
              "Name": "VPC-CloudPlay",
              "maneged": "Terraform134",
              "owner": "Marcelo"
            }
          }
        }
      ]
    }
  ]
}